--- a/provision-vps.yml
+++ b/provision-vps.yml
@@ -3,6 +3,8 @@
   hosts: all
   become: true
   tasks:
+  # VPS with Ubuntu 22.04 assumed
+  # ansible_user configured, host key login + sudo nopassword
   # Password for ansible_user was changed manually
   # Dns + reverse dns was changed manually
   # Exim4 install + smarthost config + dns change was changed manually
@@ -16,6 +18,7 @@
       name:
         - unattended-upgrades
         - python3-pip
+        - python3-virtualenv
         - acl  # needed for ansible to perform updates as unprivileged users
       state: present
     when: ansible_os_family == 'Debian'
