--- a/aoc_alert_bot.yml
+++ b/aoc_alert_bot.yml
@@ -42,6 +42,7 @@
         with_items:
           - { year: 2021 , cron_minute: 1}
           - { year: 2022 , cron_minute: 2, cron_hour: "*/6"}
+          - { year: 2023 , cron_minute: 3, cron_hour: "*/6"}
       - name: Setup cronjob 2
         vars:
           leaderboard_id: 380357
@@ -59,7 +60,8 @@
           - { year: 2019 , cron_minute: 14}
           - { year: 2020 , cron_minute: 15}
           - { year: 2021 , cron_minute: 16, cron_hour: "*/6"}
-          - { year: 2022 , cron_minute: "*/15", cron_hour: "*"}
+          - { year: 2022 , cron_minute: 17, cron_hour: "*"}
+          - { year: 2023 , cron_minute: "*/15", cron_hour: "*"}
   - name: Load bot + telegram-send config from vault
     include_vars: vault/{{ username }}.yml
   - name: Copy bot + telegram-send config from vault
