--- a/reboot_if_needed.yml
+++ b/reboot_if_needed.yml
@@ -9,7 +9,7 @@
     - name: Check if reboot is required
       stat:
         path: /var/run/reboot-required
-        get_md5: no
+        get_checksum: no
       register: reboot_required_file_existence
 
     - name: Reboot servers if kernel is updated
