--- a/aoc_alert_bot.yml
+++ b/aoc_alert_bot.yml
@@ -38,11 +38,13 @@
           name: "Send alert for team {{ leaderboard_id }} for year {{ item.year }}"
           minute: "{{ item.cron_minute }}"
           hour: "{{ item.cron_hour | default('2') }}"
+          month: "{{ item.cron_month | default('*') }}"
           job: "/home/{{ username }}/src/alert/update_and_send.bash {{ leaderboard_id}} {{ item.year }} {{ configfile}}"
         with_items:
           - { year: 2022 , cron_minute: 1}
           - { year: 2023 , cron_minute: 2}
-          - { year: 2024 , cron_minute: 3, cron_hour: "*"}
+          - { year: 2024 , cron_minute: 3}
+          - { year: 2025 , cron_month: 12, cron_minute: 4, cron_hour: "*"}
       - name: Setup cronjob 2
         vars:
           leaderboard_id: 380357
@@ -51,6 +53,7 @@
           name: "Send alert for team {{ leaderboard_id }} for year {{ item.year }}"
           minute: "{{ item.cron_minute }}"
           hour: "{{ item.cron_hour | default('2') }}"
+          month: "{{ item.cron_month | default('*') }}"
           job: "/home/{{ username }}/src/alert/update_and_send.bash {{ leaderboard_id}} {{ item.year }} {{ configfile}}"
         with_items:
           - { year: 2015 , cron_minute: 10}
@@ -62,7 +65,8 @@
           - { year: 2021 , cron_minute: 16}
           - { year: 2022 , cron_minute: 17}
           - { year: 2023 , cron_minute: 18}
-          - { year: 2024 , cron_minute: "*/5", cron_hour: "*"}
+          - { year: 2024 , cron_minute: 19}
+          - { year: 2025 , cron_month: 12, cron_minute: "*/5", cron_hour: "*"}
       - name: Setup cronjob 3
         vars:
           leaderboard_id: 380677
