--- a/lastfm-event-countdown.yml
+++ b/lastfm-event-countdown.yml
@@ -47,7 +47,7 @@
     become: true
     template:
       src: templates/lastfm-event-countdown.locations.j2
-      dest: /etc/nginx/conf.d/vps2.stad.gr.lastfm-event-countdown.locations
+      dest: /etc/nginx/conf.d/{{ inventory_hostname }}.lastfm-event-countdown.locations
       mode: 0644
     notify: restart nginx
   - name: Compile frontend locally
